# cloud.point.cloud

./: .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  project.yml
Brand/: BRAND.md
worker/: .gitignore  THIRD_PARTY_NOTICES.md  pyproject.toml
worker/scripts/: sync-runtime  verify-protocol
worker/src/cloudpoint_worker/: __init__.py  cli.py  cpc.py  errors.py  geometry.py  outputs.py  preprocess.py  server.py  session.py
worker/src/cloudpoint_worker/model/: __init__.py  aggregator.py  backbone.py  config.py  heads.py  layers.py  lingbot.py  rope.py  weight_specs.py
worker/src/cloudpoint_worker/model/_vendor/: __init__.py
worker/src/cloudpoint_worker/model/_vendor/lingbot_map_mlx/: PROVENANCE.md  __init__.py
worker/src/cloudpoint_worker/model/_vendor/lingbot_map_mlx/aggregator/: base.py  stream.py
worker/src/cloudpoint_worker/model/_vendor/ml_sharp/: PROVENANCE.md
worker/src/cloudpoint_worker/model_prep/: __init__.py  artifacts.py  cli.py  convert.py  provenance.py
worker/src/cloudpoint_worker/protocol/: __init__.py  fixtures.py  framing.py  schema.py
worker/src/cloudpoint_worker/sharp/: __init__.py  cli.py  inference.py  session.py
worker/tests/: test_cli_smoke.py  test_geometry_cpc.py  test_layers_parity.py  test_model_parity.py  test_model_prep.py  test_preprocess.py  test_session_server.py  test_sharp_session.py
worker/tests/fixtures/: protocol-v1.json
worker/tests/fixtures/courthouse/: provenance.json
worker/tests/protocol/: test_fixtures.py  test_framing.py  test_schema.py
worker/tools/: export_reference.py
(+143 files in other folders)
