[project]
name = "cloudpoint-worker"
version = "0.1.0"
description = "Network-free Apple Silicon reconstruction worker for CloudPoint"
requires-python = "==3.12.*"
dependencies = [
  "mlx==0.32.0",
  "msgspec==0.19.0",
  "numpy==2.3.1",
  "Pillow==11.3.0",
  "safetensors==0.5.3",
]

[project.optional-dependencies]
model-prep = ["torch==2.8.0"]
reference = [
  "einops==0.8.1",
  "huggingface-hub==0.33.4",
  "scipy==1.16.0",
  "torch==2.8.0",
  "torchvision==0.23.0",
  "tqdm==4.67.1",
]

[dependency-groups]
dev = ["pytest==8.4.1", "pytest-timeout==2.4.0", "ruff==0.12.4"]

[project.scripts]
cloudpoint-worker = "cloudpoint_worker.cli:main"
cloudpoint-model = "cloudpoint_worker.model_prep.cli:main"

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudpoint_worker"]

[tool.pytest.ini_options]
markers = ["real_model: requires the verified 4.6 GB checkpoint and Apple Silicon"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
